# rainbow-map-mx

./: .gitignore  README.md  pyproject.toml
dashboard_base/: README.md
dashboard_base/data/processed/: catalogo_entidades_estandar.csv  indicadores_dashboard_estatal.csv  indicadores_demo_estatal.csv  mexico_entidades_4326_web.geojson
dashboard_base/reports/: analizar_mg2025.py  resumen_mg2025.json
dashboard_base/scripts/: generar_indicadores_dashboard.py  preparar_base_mapa.py
dashboard_base/web/: app.js  index.html  styles.css
docs/: PIPELINE_README.md
notebooks/: 00_setup_and_project_structure.ipynb  01_file_inventory_and_metadata_scan.ipynb  02_variable_discovery.ipynb  03_population_definition_and_harmonization.ipynb  04_indicator_construction.ipynb  05_scoring_thresholds_and_quality_flags.ipynb  06_exports_and_methodology_summary.ipynb
outputs/: indicator_metadata.parquet  quality_flags.parquet  state_scores_long.parquet  state_scores_wide.parquet
source_inegi/: 0_indice_tablas_enadis2022.csv  0_indice_tablas_endiseg_2021.csv
source_inegi/catalogos/: contenido.txt  localidades_islas.csv  localidades_rurales_que_rebasan_AGEB.csv  localidades_rurales_que_rebasan_su_municipio.csv  localidades_urbanas_que_rebasan_su_municipio.csv  localidades_urbanas_y_rurales_amanzanadas.csv  léeme.txt  áreas_geoestadísticas_estatales.csv  áreas_geoestadísticas_municipales.csv
source_inegi/metadatos/: metadato_mgi_2025.txt  mgi_2025.txt  mgi_2025.xml
source_inegi/tadolescente_enadis2022/catalogos/: edad.csv  (+62 more)
src/pipeline/: __init__.py  pipeline.py  run_pipeline.py
(+728 files in other folders)
