[project]
name = "atlas-lgbtiq-pipeline"
version = "0.1.0"
description = "Research-grade local pipeline for ENADIS 2022 and ENDISEG 2021 indicators"
readme = "docs/PIPELINE_README.md"
requires-python = ">=3.11"
dependencies = [
  "polars>=1.8.2",
  "pyarrow>=17.0.0",
  "numpy>=1.26.0",
  "scipy>=1.12.0",
  "jupyter>=1.0.0",
  "matplotlib>=3.8.0",
  "pyyaml>=6.0.2"
]

[project.optional-dependencies]
dev = [
  "ipykernel>=6.29.5",
  "ruff>=0.6.5"
]

[tool.uv]
dev-dependencies = [
  "ipykernel>=6.29.5",
  "ruff>=0.6.5"
]

[tool.ruff]
line-length = 100
